argocd/hello-k8s-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-k8s
  name: hello-k8s
  namespace: dev-app 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-k8s
  template:
    metadata:
      labels:
        app: hello-k8s
    spec:
      containers:
      - image: tonykien2012/hello-k8s:4.0 
        imagePullPolicy: Always
        name: hello-k8s
        ports:
        - containerPort: 5000
