argocd/hello-k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s
  namespace: dev-app
spec:
  ports:
  - port: 5000  
    targetPort: 5000
  selector:
    app: hello-k8s
