argocd/hello-k8s-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-k8s-ingress
  namespace: dev-app
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - hello.reb.com
    secretName: hello-k8s-tls
  rules:
    - host: hello.reb.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hello-k8s
                port:
                  number: 5000
